Fixed visual bug where selected file names would disappear once successfully transferred to the server. Note that our Choose file buttons no longer use the default button styling of the browser, and they are not vertically aligned with preceding text.

--- a/www/CSS/burritostyle.css
+++ b/www/CSS/burritostyle.css
@@ -203,6 +203,16 @@ h2 {
 	margin-right: auto;
 	background-color: #FFD700;
 }
+.btn-file {
+	background-image: linear-gradient(to bottom, #FFFFFF, #F0F0F0);
+	border: 0.5px solid #afafaf;
+	padding-top: 2px;
+	padding-bottom: 2px;
+	padding-right: 8px;
+	padding-left: 8px;
+	color: #000000;
+	margin: 2px;
+}
 
 #tooLongTableDiv {
 	position:relative;
